--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@notionhq/client": "^3.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^12.10.0",
+    "lottie-react": "^2.4.1",
     "next": "15.3.2",
     "notion-to-md": "^3.1.8",
     "react": "^19.0.0",
