--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.10.0",
     "lottie-react": "^2.4.1",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "notion-to-md": "^3.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
