--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^12.10.0",
     "lottie-react": "^2.4.1",
-    "next": "15.3.2",
+    "next": "^15.3.8",
     "next-themes": "^0.4.6",
     "notion-to-md": "^3.1.8",
     "react": "^19.0.0",
@@ -32,7 +32,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^15.3.8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
